@@ -5,6 +5,8 @@
   your local installation as well. MathJax is enabled by default,
   and can also be enabled only for certain tags.
 
+* Switch pages using mouse
+* Paging in thread index moves cursor
 * Do not load remote images or resources from html files
 * C-m: adds 'muted' tag, 'muted' messages are excluded from non-explicit
        searches.
